src/compiladorGo/GoGramatica.java
package compiladorGo;
/* GoGramatica.java */
/* Generated By:JavaCC: Do not edit this line. GoGramatica.java */
import java.io.FileInputStream;
import java.io.FileNotFoundException;

public class GoGramatica implements GoGramaticaConstants {
    public static void main(String[] args) throws ParseException {
        if (args.length > 0) {
            try {
                FileInputStream fis = new FileInputStream(args[0]);
                GoGramatica parser = new GoGramatica(fis);
                parser.Inicio();
                System.out.println("Sintaxe v\u00e1lida.");
            } catch (FileNotFoundException e) {
                System.out.println("Arquivo n\u00e3o encontrado: " + args[0]);
            }
        } else {
            System.out.println("Por favor, especifique um arquivo de entrada.");
        }
    }

// regra inicial da gramática.
// define a estrutura de um arquivo Go: um header opcional, múltiplos imports e comandos.
  static final public void Inicio() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PACKAGE:{
      Header();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPORT:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      Import();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FUNC:
      case VAR:
      case IF:
      case FOR:
      case PRINT:
      case ENTRADA:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      Comando();
    }
    jj_consume_token(0);
}

// define a estrutura da declaração de pacote.
// Ex: "package main"
  static final public void Header() throws ParseException {
    jj_consume_token(PACKAGE);
    jj_consume_token(IDENTIFICADOR);
}

// define a estrutura de uma declaração de import.
// Ex: "import "fmt""
  static final public void Import() throws ParseException {
    jj_consume_token(IMPORT);
    jj_consume_token(STRING);
}

// define os diferentes tipos de comandos que podem aparecer no corpo principal ou funções
  static final public void Comando() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:{
      jj_consume_token(VAR);
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(TIPO);
      DeclaracaoVariavel();
      break;
      }
    case FUNC:{
      jj_consume_token(FUNC);
      jj_consume_token(IDENTIFICADOR);
      criarFuncao();
      break;
      }
    case IDENTIFICADOR:{
      jj_consume_token(IDENTIFICADOR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IGUAL:
      case DOISPONTOS:{
        Atribuicao();
        break;
        }
      case 39:{
        chamarFuncao();
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    case IF:{
      Condicional();
      break;
      }
    case FOR:{
      LoopFor();
      break;
      }
    case PRINT:{
      Saida();
      break;
      }
    case ENTRADA:{
      Entrada();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// define as diferentes formas de atribuição de valor a uma variável.
// atribuição simples (=) ou uma declaração curta (:=).
  static final public void Atribuicao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DOISPONTOS:{
      jj_consume_token(DOISPONTOS);
      jj_consume_token(IGUAL);
      break;
      }
    case IGUAL:{
      jj_consume_token(IGUAL);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    Expressao();
}

// define a parte opcional de inicialização em uma declaração de variável.
// Ex: var x int = 10 
  static final public void DeclaracaoVariavel() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IGUAL:{
      jj_consume_token(IGUAL);
      Expressao();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
}

// define a estrutura para criar uma nova função.
// inclui parâmetros, tipo de retorno e o corpo da função.
  static final public void criarFuncao() throws ParseException {
    jj_consume_token(39);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFICADOR:{
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(TIPO);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 40:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        jj_consume_token(40);
        jj_consume_token(IDENTIFICADOR);
        jj_consume_token(TIPO);
      }
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(41);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPO:{
      jj_consume_token(TIPO);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(42);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FUNC:
      case VAR:
      case IF:
      case FOR:
      case PRINT:
      case ENTRADA:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      Comando();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RETURN:{
      jj_consume_token(RETURN);
      Expressao();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(43);
}

// define a estrutura para chamar uma função.
// consiste no nome da função seguido por uma lista de argumentos entre parênteses.
  static final public void chamarFuncao() throws ParseException {
    jj_consume_token(39);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SOMA:
    case SUBTRACAO:
    case TRUE:
    case FALSE:
    case INTEIRO:
    case REAL:
    case STRING:
    case IDENTIFICADOR:
    case 39:{
      Expressao();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 40:{
          ;
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          break label_5;
        }
        jj_consume_token(40);
        Expressao();
      }
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(41);
}

// define a estrutura de uma instrução condicional 'if'.
  static final public void Condicional() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(39);
    Expressao();
    jj_consume_token(41);
    jj_consume_token(42);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FUNC:
      case VAR:
      case IF:
      case FOR:
      case PRINT:
      case ENTRADA:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_6;
      }
      Comando();
    }
    jj_consume_token(43);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      ElsePart();
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
}

// define a parte 'else' ou 'else if' de uma instrução condicional.
// Pode ser um 'else if' (recursivo chamando Condicional) ou um 'else' simples.
  static final public void ElsePart() throws ParseException {
    jj_consume_token(ELSE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IF:{
      Condicional();
      break;
      }
    case 42:{
      jj_consume_token(42);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FUNC:
        case VAR:
        case IF:
        case FOR:
        case PRINT:
        case ENTRADA:
        case IDENTIFICADOR:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_7;
        }
        Comando();
      }
      jj_consume_token(43);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// define a estrutura dos laços 'for' em Go
  static final public void LoopFor() throws ParseException {
    jj_consume_token(FOR);
    if (jj_2_1(2)) {
      jj_consume_token(39);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SOMA:
      case SUBTRACAO:
      case TRUE:
      case FALSE:
      case INTEIRO:
      case REAL:
      case STRING:
      case IDENTIFICADOR:
      case 39:{
        Expressao();
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      jj_consume_token(44);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SOMA:
      case SUBTRACAO:
      case TRUE:
      case FALSE:
      case INTEIRO:
      case REAL:
      case STRING:
      case IDENTIFICADOR:
      case 39:{
        Expressao();
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(44);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SOMA:
      case SUBTRACAO:
      case TRUE:
      case FALSE:
      case INTEIRO:
      case REAL:
      case STRING:
      case IDENTIFICADOR:
      case 39:{
        Expressao();
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      jj_consume_token(41);
      jj_consume_token(42);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FUNC:
        case VAR:
        case IF:
        case FOR:
        case PRINT:
        case ENTRADA:
        case IDENTIFICADOR:{
          ;
          break;
          }
        default:
          jj_la1[21] = jj_gen;
          break label_8;
        }
        Comando();
      }
      jj_consume_token(43);
    } else if (jj_2_2(2147483647)) {
      ForRange();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SOMA:
      case SUBTRACAO:
      case TRUE:
      case FALSE:
      case INTEIRO:
      case REAL:
      case STRING:
      case IDENTIFICADOR:
      case 39:{
        Expressao();
        jj_consume_token(42);
        label_9:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case FUNC:
          case VAR:
          case IF:
          case FOR:
          case PRINT:
          case ENTRADA:
          case IDENTIFICADOR:{
            ;
            break;
            }
          default:
            jj_la1[22] = jj_gen;
            break label_9;
          }
          Comando();
        }
        jj_consume_token(43);
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

// define a estrutura de um laço 'for range'.
  static final public void ForRange() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFICADOR:{
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    case 45:{
      jj_consume_token(45);
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 40:{
      jj_consume_token(40);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFICADOR:{
        jj_consume_token(IDENTIFICADOR);
        break;
        }
      case 45:{
        jj_consume_token(45);
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    jj_consume_token(DOISPONTOS);
    jj_consume_token(IGUAL);
    jj_consume_token(RANGE);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(42);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FUNC:
      case VAR:
      case IF:
      case FOR:
      case PRINT:
      case ENTRADA:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        break label_10;
      }
      Comando();
    }
    jj_consume_token(43);
}

// define a estrutura de uma chamada de função de saída (ex: fmt.Println).
  static final public void Saida() throws ParseException {
    jj_consume_token(PRINT);
    jj_consume_token(39);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case STRING:{
      jj_consume_token(STRING);
      break;
      }
    case IDENTIFICADOR:{
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(41);
}

// define a estrutura de uma chamada de função de entrada (ex: fmt.Scanln).
  static final public void Entrada() throws ParseException {
    jj_consume_token(ENTRADA);
    jj_consume_token(39);
    jj_consume_token(ANDPER);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(41);
}

// regra para definir uma expressão geral.
// uma expressão pode ser aritmética, booleana, lógica
  static final public void Expressao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SOMA:
    case SUBTRACAO:
    case INTEIRO:
    case REAL:
    case STRING:
    case IDENTIFICADOR:
    case 39:{
      ExpressaoAritmetica();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMPARACAO:
      case DIFERENTE:
      case MAIOR:
      case MENOR:
      case MAIORIGUAL:
      case MENORIGUAL:{
        ExpressaoBooleana();
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:
      case OR:{
        ExpressaoLogica();
        break;
        }
      default:
        jj_la1[30] = jj_gen;
        ;
      }
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
      break;
      }
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// define uma expressão booleana, que envolve operadores relacionais.
  static final public void ExpressaoBooleana() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMPARACAO:{
      jj_consume_token(COMPARACAO);
      break;
      }
    case DIFERENTE:{
      jj_consume_token(DIFERENTE);
      break;
      }
    case MENOR:{
      jj_consume_token(MENOR);
      break;
      }
    case MAIOR:{
      jj_consume_token(MAIOR);
      break;
      }
    case MENORIGUAL:{
      jj_consume_token(MENORIGUAL);
      break;
      }
    case MAIORIGUAL:{
      jj_consume_token(MAIORIGUAL);
      break;
      }
    default:
      jj_la1[32] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    ExpressaoAritmetica();
}

// define uma expressão lógica, que envolve operadores lógicos 
  static final public void ExpressaoLogica() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AND:{
      jj_consume_token(AND);
      break;
      }
    case OR:{
      jj_consume_token(OR);
      break;
      }
    default:
      jj_la1[33] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    ExpressaoAritmetica();
}

// define uma expressão aritmética, com operações de soma e subtração.
  static final public void ExpressaoAritmetica() throws ParseException {
    Termo();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SOMA:
      case SUBTRACAO:{
        ;
        break;
        }
      default:
        jj_la1[34] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SOMA:{
        jj_consume_token(SOMA);
        break;
        }
      case SUBTRACAO:{
        jj_consume_token(SUBTRACAO);
        break;
        }
      default:
        jj_la1[35] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Termo();
    }
}

// define um termo em uma expressão aritmética, com operações de multiplicação e divisão.
  static final public void Termo() throws ParseException {
    Fator();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLICACAO:
      case DIVISAO:{
        ;
        break;
        }
      default:
        jj_la1[36] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLICACAO:{
        jj_consume_token(MULTIPLICACAO);
        break;
        }
      case DIVISAO:{
        jj_consume_token(DIVISAO);
        break;
        }
      default:
        jj_la1[37] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Fator();
    }
}

// define um fator em uma expressão aritmética, que são os elementos mais básicos.
  static final public void Fator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SOMA:
    case SUBTRACAO:
    case INTEIRO:
    case REAL:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SOMA:
      case SUBTRACAO:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SOMA:{
          jj_consume_token(SOMA);
          break;
          }
        case SUBTRACAO:{
          jj_consume_token(SUBTRACAO);
          break;
          }
        default:
          jj_la1[38] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[39] = jj_gen;
        ;
      }
      Numero();
      break;
      }
    case IDENTIFICADOR:{
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    case STRING:{
      jj_consume_token(STRING);
      break;
      }
    case 39:{
      jj_consume_token(39);
      Expressao();
      jj_consume_token(41);
      break;
      }
    default:
      jj_la1[40] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// define um literal numérico, que pode ser um inteiro ou um real.
  static final public void Numero() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEIRO:{
      jj_consume_token(INTEIRO);
      break;
      }
    case REAL:{
      jj_consume_token(REAL);
      break;
      }
    default:
      jj_la1[41] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_3_1()
 {
    if (jj_scan_token(39)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_LoopFor_175_14_13()) jj_scanpos = xsp;
    if (jj_scan_token(44)) return true;
    return false;
  }

  static private boolean jj_3R_null_180_47_14()
 {
    if (jj_scan_token(40)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(38)) {
    jj_scanpos = xsp;
    if (jj_scan_token(45)) return true;
    }
    return false;
  }

  static private boolean jj_3R_Numero_266_5_23()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(35)) {
    jj_scanpos = xsp;
    if (jj_scan_token(36)) return true;
    }
    return false;
  }

  static private boolean jj_3R_Expressao_219_5_15()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_Expressao_219_5_16()) {
    jj_scanpos = xsp;
    if (jj_scan_token(29)) {
    jj_scanpos = xsp;
    if (jj_scan_token(30)) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_Expressao_219_5_16()
 {
    if (jj_3R_ExpressaoAritmetica_242_5_17()) return true;
    return false;
  }

  static private boolean jj_3R_ExpressaoAritmetica_242_5_17()
 {
    if (jj_3R_Termo_249_5_18()) return true;
    return false;
  }

  static private boolean jj_3_2()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(38)) {
    jj_scanpos = xsp;
    if (jj_scan_token(45)) return true;
    }
    xsp = jj_scanpos;
    if (jj_3R_null_180_47_14()) jj_scanpos = xsp;
    if (jj_scan_token(DOISPONTOS)) return true;
    return false;
  }

  static private boolean jj_3R_Fator_259_7_21()
 {
    if (jj_scan_token(39)) return true;
    return false;
  }

  static private boolean jj_3R_Fator_256_7_22()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(5)) {
    jj_scanpos = xsp;
    if (jj_scan_token(6)) return true;
    }
    return false;
  }

  static private boolean jj_3R_Fator_256_5_20()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_Fator_256_7_22()) jj_scanpos = xsp;
    if (jj_3R_Numero_266_5_23()) return true;
    return false;
  }

  static private boolean jj_3R_Fator_256_5_19()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_Fator_256_5_20()) {
    jj_scanpos = xsp;
    if (jj_scan_token(38)) {
    jj_scanpos = xsp;
    if (jj_scan_token(37)) {
    jj_scanpos = xsp;
    if (jj_3R_Fator_259_7_21()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_LoopFor_175_14_13()
 {
    if (jj_3R_Expressao_219_5_15()) return true;
    return false;
  }

  static private boolean jj_3R_Termo_249_5_18()
 {
    if (jj_3R_Fator_256_5_19()) return true;
    return false;
  }
